# runit

./: .drone.yml  .gitignore  CHANGES  CMakeLists.txt  COPYING.md  ConfigureChecks.cmake  Dockerfile  README.md
distro_patches/debian/: 0001-default-directory-for-services-on-Debian-is-etc-servi.diff  0002-support-etc-runit-nosync-file-to-make-sync-on-shutdow.diff  0003-utmpset.c-mixes-int32_t-and-time_t.diff  0004-src-Makefile-don-t-use-static-to-link-runit-runit-ini.diff  0005-patch-etc-runit-2-for-FHS.patch  0006-make-buildsystem-respect-CFLAGS.patch  0007-move-communication-files.patch  0008-emulate-sysv-runlevel-5.patch  0009-fix-error-in-manpage.patch  series
doc/: CMakeLists.txt  index.html  runit.8.html  svlogd.8.html
doc/man/: runit.8  svlogd.8
include/: config.h.in  direntry.h  error.h  seek.h  tai.h  uw_tmp.h
src/: CMakeLists.txt  Makefile.orig  chpst.c  config.h.in  direntry.h  fifo.c  iopause.c  iopause.h  pathexec_run.c  runit-init.c  runit.c  runit.h  runsv.c  runsvchdir.c  runsvctrl.c  runsvdir.c  runsvstat.c  sig_catch.c  sig_pause.c  sv.c  svlogd.c  svwaitdown.c  svwaitup.c  utmpset.c  wait_nohang.c  wait_pid.c
src/lib/: CMakeLists.txt
src/lib/byte/: CMakeLists.txt  fmt_ptime.c
src/lib/time/: CMakeLists.txt
src/lib/unix/: CMakeLists.txt  alloc.c  buffer_get.c  buffer_put.c  error.c  fifo.c  lock_ex.c  lock_exnb.c  openreadclose.c  pathexec_run.c  prot.c  readclose.c  seek_set.c  sig_block.c  strerr_sys.c  wait_pid.c  x86cpuid.c
